# linux-dictation

./: README.md  config.ini.example  config_manager.py  dictation_service.py  gui.py  main.py  overview.md  pyproject.toml  requirements.txt
