[project]
name = "linux-dictation"
version = "0.1.0"
description = "A dictation application for Linux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.1",
    "keyboard>=0.13.5",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "pynput>=1.8.1",
    "pystray>=0.19.5",
    "sounddevice>=0.5.1",
]
